fixed select menu page overflow issue

--- a/src/components/form-components/select/menu/styles.module.scss
+++ b/src/components/form-components/select/menu/styles.module.scss
@@ -13,7 +13,6 @@
 .menu {
   min-width: 100%;
   width: fit-content;
-  max-height: 40vh;
   overflow-y: scroll;
   list-style-type: none;
   margin: 0;
